Add showcase links in index.html and README.md

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 		<div class="typewriter">
 			<p>Mini-machine à écrire réalisée avec 2 animations CSS.</p>
 		</div>
+		<p><a href="https://github.com/eb01/typewriter" target="_blank">GitHub</a></p>
 	</body>
 </html>
